fullSandbox11072023/force-app/main/default/objects/CustomIDs__c/CustomIDs__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Custom IDs for SCRUM</label>
</CustomObject>