fullSandbox11072023/force-app/main/default/objects/CustomIDs__c/fields/Current_Sprint_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Sprint_Name__c</fullName>
    <description>Enter the name of the current sprint</description>
    <inlineHelpText>Enter the name of the current sprint</inlineHelpText>
    <label>Current Sprint Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>