fullSandbox11072023/force-app/main/default/objects/CustomIDs__c/fields/Element_Story__c.field-meta.xml
<CustomField>
    <fullName>Element_Story__c</fullName>
    <description>Insert the 15-digit Salesforce Custom Field ID for the field with API Name &quot;User_Story__c&quot; on Custom Object &quot;Element&quot;.
***Setup&gt; Create&gt; Objects&gt; Element&gt; Story&gt; grab the 15 characters that appear after &quot;.com/&quot;, then paste them here***</description>
    <label>Element__c.Story__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>