fullSandbox11072023/force-app/main/default/objects/CustomIDs__c/fields/Project_Team_Project__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Project__c</fullName>
    <description>Insert the 15-digit Salesforce Custom Field ID for the field with API Name &quot;Project__c&quot; on Custom Object &quot;Project Team&quot;.
***Setup&gt; Create&gt; Objects&gt; Project Team&gt; Project&gt; grab the 15 characters that appear after &quot;.com/&quot;, then paste them here***</description>
    <label>Project_Team__c.Project__c</label>
    <length>15</length>
    <type>Text</type>
</CustomField>